--- a/css/style.sass
+++ b/css/style.sass
@@ -147,7 +147,7 @@ input[type=checkbox]
     display: flex
     justify-content: space-between
     margin: 63px 0 30px
-    height: 260px
+    max-height: 260px
 
     &__item_margin
         margin: 0 30px
@@ -436,3 +436,140 @@ input[type=checkbox]
 @import cart
 
 @import registration
+
+@media (max-width: $screenTablet)
+    .top-header
+        padding: 0 16px
+
+    .promo
+        &__header
+            +font(44px, 53px)
+
+        &__text
+            +font(24px, 29px)
+
+        &__content
+            margin-left: 40px
+
+    .catalog
+        padding: 0 16px
+        margin: 20px 0 20px
+
+        &__item_margin
+            margin: 0 20px       
+
+    .catalog__bottom
+        padding: 0 16px
+
+    .product__catalog
+        padding: 0 16px
+        grid-template: repeat(3, 1fr)/repeat(2, 1fr)
+        grid-gap: 16px
+
+    .product__heading
+        line-height: 36px
+
+    .product__button
+        margin: 32px auto 0
+
+    .footer-top
+        margin-top: 65px
+        height: 100%
+        padding-bottom: 64px
+
+        &__container
+            flex-direction: column
+
+        &__item
+            margin-top: 48px
+
+    .footer-subscribe
+        flex-direction: column
+        padding: 53px 0 140px
+        background-position: left, bottom
+
+    .subscribe-form__text
+        margin: 0 0 27px
+
+    .footer-bottom
+        padding: 0 16px
+
+@media (max-width: $screenMobile)
+    .main-menu__img_hide
+        display: none
+
+    .top-header
+        padding: 0 16px
+
+    .catalog
+        padding: 0 16px
+        flex-direction: column
+        max-height: 100%
+        margin: 64px 0 0
+
+        &__item
+            margin-bottom: 32px
+
+            &_height
+                height: 111px
+
+        &__item_margin
+            margin: 0 0 32px
+
+        &__bottom
+            padding: 0 16px
+
+        &__img_height
+            height: 100%
+
+    .top-header__right > nav
+        right: 0
+
+    .promo__left
+        display: none
+
+    .promo__content
+        margin: 0 auto
+
+    .promo__right
+        padding: 0
+        width: 100%
+        height: 363px
+
+    .promo__header
+        +font(38px, 45px)
+
+    .promo__text
+        +font(20px, 24px)
+
+    .product__heading
+        margin-top: 64px
+
+    .product__catalog
+        padding: 0 8px
+        grid-template: repeat(6, 1fr) / repeat(1, 1fr)
+
+    .product__text
+        margin-bottom: 64px
+
+    .product__button
+        margin: 41px auto 0
+
+    .footer-top
+        margin-top: 96px
+
+    .footer-subscribe
+        padding: 53px 0 110px
+
+    .footer-bottom
+        height: 100%
+
+        &__container
+            flex-direction: column-reverse
+            padding-bottom: 9px
+
+        &__social
+            margin: 40px 0
+
+    .subscribe-form__text
+        +font(14px, 22px)
