--- a/css/style.css
+++ b/css/style.css
@@ -677,9 +677,9 @@ input[type=checkbox] {
 .main-catalog__product {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: (1fr)[1];
+  -ms-grid-rows: (1fr)[3];
   -ms-grid-columns: (1fr)[3];
-      grid-template: repeat(1, 1fr)/repeat(3, 1fr);
+      grid-template: repeat(3, 1fr)/repeat(3, 1fr);
   grid-gap: 30px;
   margin-bottom: 128px;
 }
@@ -724,7 +724,7 @@ details summary::-webkit-details-marker {
 
 .filter-menu__navbar {
   position: absolute;
-  left: -120vw;
+  left: -200vw;
   z-index: 1;
   background-color: white;
   padding: 17px;
@@ -933,6 +933,88 @@ details summary::-webkit-details-marker {
 
 .pagination__item:hover {
   color: #F16D7F;
+}
+
+@media (max-width: 769px) {
+  .main-catalog__product {
+    -ms-grid-rows: (1fr)[4];
+    -ms-grid-columns: (1fr)[2];
+        grid-template: repeat(4, 1fr)/repeat(2, 1fr);
+    grid-gap: 16px;
+    padding: 0 16px;
+    margin-bottom: 40px;
+  }
+  .product-card:last-child {
+    display: none;
+  }
+  .main-catalog__header {
+    padding: 0 16px;
+  }
+  .filter-menu_position {
+    padding: 0 16px;
+    margin: 24px 0 40px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .chooser-checkbox_position {
+    margin: 0;
+  }
+  .filter-menu__text {
+    padding-left: 0;
+  }
+  .top-header__right > nav {
+    right: 0;
+  }
+}
+
+@media (max-width: 376px) {
+  .main-catalog__header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .main-catalog__header__header {
+    margin: 24px 0 32px;
+  }
+  .chooser-checkbox {
+    font-family: Lato;
+    font-size: 12px;
+    line-height: 14px;
+    margin-left: 24px;
+  }
+  .filter-menu__text {
+    color: #ffffff;
+    display: block;
+    top: -20px;
+  }
+  .filter-menu__img {
+    -webkit-transform: scale(2);
+            transform: scale(2);
+  }
+  .filter-menu__img_red {
+    left: 11px;
+    top: 21px;
+    -webkit-transform: scale(2);
+            transform: scale(2);
+  }
+  .filter-menu__input:checked ~ .filter-menu__text {
+    color: #fff;
+    display: block;
+    top: -20px;
+  }
+  .main-catalog__product {
+    -ms-grid-rows: auto;
+    -ms-grid-columns: 1fr;
+        grid-template: auto / 1fr;
+  }
+  .footer-top {
+    margin-top: 64px;
+  }
 }
 
 .slider {
