--- a/css/style.sass
+++ b/css/style.sass
@@ -547,7 +547,7 @@ input[type=checkbox]
 
     .product__catalog
         padding: 0 8px
-        grid-template: repeat(6, 1fr) / repeat(1, 1fr)
+        grid-template: auto / repeat(1, 1fr)
 
     .product__text
         margin-bottom: 64px
