--- a/css/style.css
+++ b/css/style.css
@@ -677,9 +677,9 @@ input[type=checkbox] {
 .main-catalog__product {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: (1fr)[3];
+  -ms-grid-rows: auto;
   -ms-grid-columns: (1fr)[3];
-      grid-template: repeat(3, 1fr)/repeat(3, 1fr);
+      grid-template: auto/repeat(3, 1fr);
   grid-gap: 30px;
   margin-bottom: 128px;
 }
@@ -937,9 +937,9 @@ details summary::-webkit-details-marker {
 
 @media (max-width: 769px) {
   .main-catalog__product {
-    -ms-grid-rows: (1fr)[4];
+    -ms-grid-rows: auto;
     -ms-grid-columns: (1fr)[2];
-        grid-template: repeat(4, 1fr)/repeat(2, 1fr);
+        grid-template: auto/repeat(2, 1fr);
     grid-gap: 16px;
     padding: 0 16px;
     margin-bottom: 40px;
@@ -1203,6 +1203,66 @@ details summary::-webkit-details-marker {
 .add-to-cart-btn:hover .add-to-cart-btn__img {
   -webkit-filter: brightness(3);
           filter: brightness(3);
+}
+
+@media (max-width: 769px) {
+  .slider {
+    height: 624px;
+  }
+  .slider__img {
+    height: 100%;
+  }
+  .product-description__position {
+    top: 0;
+  }
+  .product-description__container {
+    margin-bottom: 129px;
+  }
+  .footer-subscribe {
+    margin-top: 129px;
+  }
+}
+
+@media (max-width: 376px) {
+  .slider {
+    position: relative;
+  }
+  .slider__arrow-box {
+    position: absolute;
+  }
+  .slider__arrow-box:last-child {
+    right: 0;
+  }
+  .slider__img {
+    width: 100%;
+    height: auto;
+  }
+  .product-description__top {
+    width: auto;
+    padding: 0 25px;
+  }
+  .product-description__text {
+    width: auto;
+  }
+  .chooser__item {
+    font-family: Lato;
+    font-size: 10px;
+    line-height: 12px;
+  }
+  .chooser {
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .chooser__img {
+    margin-left: 10px;
+  }
+  .product-description__container {
+    margin-bottom: 64px;
+  }
+  .footer-subscribe {
+    margin-top: 64px;
+  }
 }
 
 .cart {
@@ -1727,9 +1787,9 @@ details summary::-webkit-details-marker {
   }
   .product__catalog {
     padding: 0 8px;
-    -ms-grid-rows: (1fr)[6];
+    -ms-grid-rows: auto;
     -ms-grid-columns: (1fr)[1];
-        grid-template: repeat(6, 1fr)/repeat(1, 1fr);
+        grid-template: auto/repeat(1, 1fr);
   }
   .product__text {
     margin-bottom: 64px;
