--- a/css/_product.sass
+++ b/css/_product.sass
@@ -89,7 +89,10 @@
 
         &:hover .chooser-checkbox__navbar
             display: flex
-            left: 14px    
+            left: 14px   
+
+.main-catalog__product_mg     
+    margin-bottom: 128px
     
 .add-to-cart-btn
     width: 211px
