--- a/css/_registration.sass
+++ b/css/_registration.sass
@@ -14,7 +14,7 @@
     &__input
         width: 100%
         height: 45px
-        margin-top: 21px
+        margin-top: 19px
         padding: 0 17px
         box-sizing: border-box
         color: #B1B1B1
@@ -57,6 +57,7 @@
         
 .registration-info
     max-width: 652px
+    margin-left: 22px
 
     &__header
         +font(24px, 29px)
@@ -78,3 +79,28 @@
         &::before
             content: url("../img/check-img.svg")
             margin-right: 23px
+
+@media (max-width: $screenTablet)
+    .registration-container
+        padding: 0 16px    
+
+    .registration-info__header
+        +font(16px, 19px)
+
+    .registration-info__description
+        +font(16px, 19px)
+
+    .registration-info__perk
+        +font(16px, 19px)
+
+@media (max-width: $screenMobile)
+    .main-catalog__header__header
+        margin: auto 0
+
+    .registration-container
+        padding: 0 8px
+        flex-direction: column
+
+    .registration-info
+        margin-left: 0
+        margin-top: 40px
