--- a/css/_catalog.sass
+++ b/css/_catalog.sass
@@ -187,18 +187,15 @@ details summary::-webkit-details-marker
         margin: 0
 
     .filter-menu__text
-        padding-left: 0
-
-    .top-header__right > nav
-        right: 0
+        padding-left: 0    
 
 @media (max-width: $screenMobile)
     .main-catalog__header
         flex-direction: column
-        justify-content: flex-start
+        justify-content: center
 
-        &__header
-            margin: 24px 0 32px
+        &_mg
+            margin-bottom: 32px
 
     .chooser-checkbox
         +font(12px, 14px)
