--- a/css/style.sass
+++ b/css/style.sass
@@ -30,11 +30,12 @@ input[type=checkbox]
     display: flex
     justify-content: space-between
     align-items: center
+    position: relative
 
     &__logo
         transition: .2s
 
-        &:hover
+        &:hover            
             transform: scale(1.1)
 
     &__search
@@ -50,6 +51,12 @@ input[type=checkbox]
         &:hover
             transform: scale(1.1)
 
+    &__right
+        +flexCenter()
+
+    &__box_hide
+        display: none
+
     &__account
         padding: 0 33px
         transition: .2s
@@ -61,26 +68,29 @@ input[type=checkbox]
         transition: .2s
 
         &:hover
-            transform: scale(1.1)
-
-    &__right
-        position: relative
+            transform: scale(1.1)    
 
     &__right > nav
         position: absolute
-        display: none
-        //height: 764px
+        right: 0
+        top: -800px
         width: 232px
         background: #FFFFFF
+        display: flex
         flex-direction: column
         padding: 16px 16px 32px 32px
         box-sizing: border-box
         box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21)
-        z-index: 1
+        z-index: 4
+        transition: .3s
+
+#main_menu
+    position: absolute
+    left: 99999px
+    visibility: hidden
 
 #main_menu:checked ~ nav
-    display: flex
-    margin-top: 22px
+    top: 75px  
 
 .close_icon
     align-self: flex-end
@@ -95,6 +105,9 @@ input[type=checkbox]
     +font(14px, 17px)
     font-weight: 400
     color: $buttonColor
+
+    &:hover
+        text-decoration: underline 
 
 .main_menu__item
     margin: 6px 0 6px 22px
@@ -496,10 +509,17 @@ input[type=checkbox]
 
 @media (max-width: $screenMobile)
     .main-menu__img_hide
-        display: none
+        filter: brightness(.5)
 
     .top-header
         padding: 0 16px
+
+        &__box
+            display: none
+
+            &_hide
+                display: flex
+                justify-content: space-evenly
 
     .catalog
         padding: 0 16px
@@ -523,7 +543,7 @@ input[type=checkbox]
             height: 100%
 
     .top-header__right > nav
-        right: 0
+        width: 100%
 
     .promo__left
         display: none
